// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cart /> renders a basic, one product cart 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            class="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              class="row align-items-center mb-3 product-wrapper"
            >
              <div
                class="col-5"
              >
                <div
                  class="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    class="img-thumbnail product-thumbnail"
                    src="https://edx.org/vot.png"
                  />
                </div>
              </div>
              <div
                class="col-7"
              >
                <h6
                  aria-level="3"
                  class="m-0"
                >
                  Introduction to Llamass
                </h6>
                <p
                  class="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            class="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              class="summary-row d-flex"
            >
              <span
                class="flex-grow-1"
              >
                Price
              </span>
              <span
                class="summary-price"
              >
                $464.88
              </span>
            </div>
            <div
              class="summary-row font-weight-bold d-flex"
            >
              <span
                class="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                class="text-right"
              >
                $464.88
              </span>
            </div>
          </div>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-label="Shopping Cart Details"
      aria-live="polite"
      aria-relevant="all"
    >
      <div>
        <span
          class="sr-only"
        >
          Shopping cart details are loaded.
        </span>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            In Your Cart
          </h5>
          <p>
            Your purchase contains the following:
          </p>
          <div
            class="row align-items-center mb-3 product-wrapper"
          >
            <div
              class="col-5"
            >
              <div
                class="embed-responsive embed-responsive-16by9"
              >
                <img
                  alt=""
                  class="img-thumbnail product-thumbnail"
                  src="https://edx.org/vot.png"
                />
              </div>
            </div>
            <div
              class="col-7"
            >
              <h6
                aria-level="3"
                class="m-0"
              >
                Introduction to Llamass
              </h6>
              <p
                class="m-0"
              >
                Verified Certificate
              </p>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="summary-heading"
          aria-live="polite"
          class="basket-section"
          role="region"
        >
          <h5
            aria-level="2"
            id="summary-heading"
          >
            Summary
          </h5>
           
          <div
            class="summary-row d-flex"
          >
            <span
              class="flex-grow-1"
            >
              Price
            </span>
            <span
              class="summary-price"
            >
              $464.88
            </span>
          </div>
          <div
            class="summary-row font-weight-bold d-flex"
          >
            <span
              class="flex-grow-1"
            >
              TOTAL
            </span>
            <span
              class="text-right"
            >
              $464.88
            </span>
          </div>
        </div>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            Order Details
          </h5>
          <p>
            After you complete your order you will be able to select course dates from your dashboard.
          </p>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Cart /> renders a basic, one product cart with coupon form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            class="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              class="row align-items-center mb-3 product-wrapper"
            >
              <div
                class="col-5"
              >
                <div
                  class="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    class="img-thumbnail product-thumbnail"
                    src="https://edx.org/watpewal.gif"
                  />
                </div>
              </div>
              <div
                class="col-7"
              >
                <h6
                  aria-level="3"
                  class="m-0"
                >
                  Introduction to Pigeonss
                </h6>
                <p
                  class="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            class="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              class="summary-row d-flex"
            >
              <span
                class="flex-grow-1"
              >
                Price
              </span>
              <span
                class="summary-price"
              >
                $445.19
              </span>
            </div>
            <form
              class="summary-row d-flex align-items-end"
            >
              <div
                class="pgn__form-group mb-0 mr-2"
              >
                <label
                  class="h6 d-block"
                  for="couponField"
                >
                  Add coupon code (optional)
                </label>
                <div
                  class="pgn__form-control-decorator-group"
                >
                  <input
                    class="form-control"
                    data-testid="couponField"
                    id="couponField"
                    name="couponField"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <button
                class="btn btn-outline-primary"
                type="submit"
              >
                Apply
              </button>
            </form>
            <div
              class="summary-row font-weight-bold d-flex"
            >
              <span
                class="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                class="text-right"
              >
                $445.19
              </span>
            </div>
          </div>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-label="Shopping Cart Details"
      aria-live="polite"
      aria-relevant="all"
    >
      <div>
        <span
          class="sr-only"
        >
          Shopping cart details are loaded.
        </span>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            In Your Cart
          </h5>
          <p>
            Your purchase contains the following:
          </p>
          <div
            class="row align-items-center mb-3 product-wrapper"
          >
            <div
              class="col-5"
            >
              <div
                class="embed-responsive embed-responsive-16by9"
              >
                <img
                  alt=""
                  class="img-thumbnail product-thumbnail"
                  src="https://edx.org/watpewal.gif"
                />
              </div>
            </div>
            <div
              class="col-7"
            >
              <h6
                aria-level="3"
                class="m-0"
              >
                Introduction to Pigeonss
              </h6>
              <p
                class="m-0"
              >
                Verified Certificate
              </p>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="summary-heading"
          aria-live="polite"
          class="basket-section"
          role="region"
        >
          <h5
            aria-level="2"
            id="summary-heading"
          >
            Summary
          </h5>
           
          <div
            class="summary-row d-flex"
          >
            <span
              class="flex-grow-1"
            >
              Price
            </span>
            <span
              class="summary-price"
            >
              $445.19
            </span>
          </div>
          <form
            class="summary-row d-flex align-items-end"
          >
            <div
              class="pgn__form-group mb-0 mr-2"
            >
              <label
                class="h6 d-block"
                for="couponField"
              >
                Add coupon code (optional)
              </label>
              <div
                class="pgn__form-control-decorator-group"
              >
                <input
                  class="form-control"
                  data-testid="couponField"
                  id="couponField"
                  name="couponField"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <button
              class="btn btn-outline-primary"
              type="submit"
            >
              Apply
            </button>
          </form>
          <div
            class="summary-row font-weight-bold d-flex"
          >
            <span
              class="flex-grow-1"
            >
              TOTAL
            </span>
            <span
              class="text-right"
            >
              $445.19
            </span>
          </div>
        </div>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            Order Details
          </h5>
          <p>
            After you complete your order you will be able to select course dates from your dashboard.
          </p>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Cart /> renders a bulk enrollment cart 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            class="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              class="row align-items-center mb-3 product-wrapper"
            >
              <div
                class="col-5"
              >
                <div
                  class="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    class="img-thumbnail product-thumbnail"
                    src="https://edx.org/eckifega.png"
                  />
                </div>
              </div>
              <div
                class="col-7"
              >
                <h6
                  aria-level="3"
                  class="m-0"
                >
                  Introduction to Chickenss
                </h6>
                <p
                  class="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
            <form
              class="summary-row form-inline"
            >
              <div
                class="form-group mr-2"
              >
                <label
                  for="code-quantity"
                >
                  Quantity
                </label>
                <div
                  class="position-relative ml-2"
                >
                  <div
                    class="pgn__form-control-decorator-group"
                  >
                    <input
                      class="has-value form-control"
                      id="code-quantity"
                      max="100"
                      min="1"
                      name="code-quantity"
                      style="width: 5rem;"
                      type="number"
                      value="1"
                    />
                  </div>
                  <small
                    class="text-muted small"
                    style="position: absolute; top: 100%; left: 0px;"
                  >
                    Max: 100
                  </small>
                </div>
              </div>
              <button
                aria-disabled="false"
                aria-live="assertive"
                class="pgn__stateful-btn pgn__stateful-btn-state-default btn btn-primary btn-sm"
                type="submit"
              >
                <span
                  class="d-flex align-items-center justify-content-center"
                >
                  <span>
                    Update
                  </span>
                </span>
              </button>
            </form>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            class="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              class="summary-row"
            >
              <table
                class="w-100"
              >
                <thead>
                  <tr>
                    <th
                      class="font-weight-normal"
                    >
                      Price
                    </th>
                    <th
                      class="font-weight-normal"
                    >
                      Quantity
                    </th>
                    <th
                      class="font-weight-normal text-right"
                    >
                      Subtotal
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      $92.77
                    </td>
                    <td>
                      1
                    </td>
                    <td
                      class="text-right"
                    >
                      $92.77
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              class="summary-row font-weight-bold d-flex"
            >
              <span
                class="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                class="text-right"
              >
                $92.77
              </span>
            </div>
          </div>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              By purchasing, you and your organization agree to the following terms:
            </p>
            <ul>
              <li>
                Each code is valid for the one course covered and can be used only one time.
              </li>
              <li>
                You are responsible for distributing codes to your learners in your organization.
              </li>
              <li>
                Each code will expire in one year from date of purchase or, if earlier, once the course is closed.
              </li>
              <li>
                If a course is not designated as self-paced, you should confirm that a course run is available before expiration.
              </li>
              <li>
                You may not resell codes to third parties.
              </li>
              <li>
                All edX for Business sales are final and not eligible for refunds.
              </li>
            </ul>
            <p>
              You will receive an email at person@edx.org with your enrollment code(s).
            </p>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-label="Shopping Cart Details"
      aria-live="polite"
      aria-relevant="all"
    >
      <div>
        <span
          class="sr-only"
        >
          Shopping cart details are loaded.
        </span>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            In Your Cart
          </h5>
          <p>
            Your purchase contains the following:
          </p>
          <div
            class="row align-items-center mb-3 product-wrapper"
          >
            <div
              class="col-5"
            >
              <div
                class="embed-responsive embed-responsive-16by9"
              >
                <img
                  alt=""
                  class="img-thumbnail product-thumbnail"
                  src="https://edx.org/eckifega.png"
                />
              </div>
            </div>
            <div
              class="col-7"
            >
              <h6
                aria-level="3"
                class="m-0"
              >
                Introduction to Chickenss
              </h6>
              <p
                class="m-0"
              >
                Verified Certificate
              </p>
            </div>
          </div>
          <form
            class="summary-row form-inline"
          >
            <div
              class="form-group mr-2"
            >
              <label
                for="code-quantity"
              >
                Quantity
              </label>
              <div
                class="position-relative ml-2"
              >
                <div
                  class="pgn__form-control-decorator-group"
                >
                  <input
                    class="has-value form-control"
                    id="code-quantity"
                    max="100"
                    min="1"
                    name="code-quantity"
                    style="width: 5rem;"
                    type="number"
                    value="1"
                  />
                </div>
                <small
                  class="text-muted small"
                  style="position: absolute; top: 100%; left: 0px;"
                >
                  Max: 100
                </small>
              </div>
            </div>
            <button
              aria-disabled="false"
              aria-live="assertive"
              class="pgn__stateful-btn pgn__stateful-btn-state-default btn btn-primary btn-sm"
              type="submit"
            >
              <span
                class="d-flex align-items-center justify-content-center"
              >
                <span>
                  Update
                </span>
              </span>
            </button>
          </form>
        </div>
        <div
          aria-labelledby="summary-heading"
          aria-live="polite"
          class="basket-section"
          role="region"
        >
          <h5
            aria-level="2"
            id="summary-heading"
          >
            Summary
          </h5>
           
          <div
            class="summary-row"
          >
            <table
              class="w-100"
            >
              <thead>
                <tr>
                  <th
                    class="font-weight-normal"
                  >
                    Price
                  </th>
                  <th
                    class="font-weight-normal"
                  >
                    Quantity
                  </th>
                  <th
                    class="font-weight-normal text-right"
                  >
                    Subtotal
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    $92.77
                  </td>
                  <td>
                    1
                  </td>
                  <td
                    class="text-right"
                  >
                    $92.77
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="summary-row font-weight-bold d-flex"
          >
            <span
              class="flex-grow-1"
            >
              TOTAL
            </span>
            <span
              class="text-right"
            >
              $92.77
            </span>
          </div>
        </div>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            Order Details
          </h5>
          <p>
            By purchasing, you and your organization agree to the following terms:
          </p>
          <ul>
            <li>
              Each code is valid for the one course covered and can be used only one time.
            </li>
            <li>
              You are responsible for distributing codes to your learners in your organization.
            </li>
            <li>
              Each code will expire in one year from date of purchase or, if earlier, once the course is closed.
            </li>
            <li>
              If a course is not designated as self-paced, you should confirm that a course run is available before expiration.
            </li>
            <li>
              You may not resell codes to third parties.
            </li>
            <li>
              All edX for Business sales are final and not eligible for refunds.
            </li>
          </ul>
          <p>
            You will receive an email at person@edx.org with your enrollment code(s).
          </p>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Cart /> renders a cart in non USD currency 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            class="sr-only"
          >
            Loading, please wait...
          </span>
          <div
            class="skeleton py-2 mb-3 w-50"
          />
          <div
            class="skeleton py-2 mb-4 mr-4"
          />
          <div
            class="row align-items-center mb-5"
          >
            <div
              class="col-5"
            >
              <div
                class="skeleton embed-responsive embed-responsive-16by9"
              />
            </div>
            <div
              class="col-7"
            >
              <div
                class="skeleton py-2 mb-3 w-50"
              />
              <div
                class="skeleton py-2 mr-4"
              />
            </div>
          </div>
          <div
            class="skeleton py-2 mb-3 w-50"
          />
          <div
            class="skeleton py-2 mb-2"
          />
          <div
            class="skeleton py-2 mb-5"
          />
          <div
            class="skeleton py-2 mb-3 w-50"
          />
          <div
            class="skeleton py-2 mb-2 mr-4"
          />
          <div
            class="skeleton py-2 mb-5 w-75"
          />
        </div>
      </section>
    </div>
    <div>
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            class="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              class="row align-items-center mb-3 product-wrapper"
            >
              <div
                class="col-5"
              >
                <div
                  class="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    class="img-thumbnail product-thumbnail"
                    src="https://edx.org/lu.jpg"
                  />
                </div>
              </div>
              <div
                class="col-7"
              >
                <h6
                  aria-level="3"
                  class="m-0"
                >
                  Introduction to Guanacos
                </h6>
                <p
                  class="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            class="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              class="summary-row d-flex"
            >
              <span
                class="flex-grow-1"
              >
                Price
              </span>
              <span
                class="summary-price"
              >
                <span>
                  MX$1,264
                   *
                </span>
              </span>
            </div>
            <div
              class="summary-row font-weight-bold d-flex"
            >
              <span
                class="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                class="text-right"
              >
                <span>
                  MX$1,264
                   *
                </span>
              </span>
            </div>
            <div
              class="text-muted font-italic"
            >
              * This total contains an approximate conversion. You will be charged 
              $66.22
               USD.
            </div>
          </div>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-label="Shopping Cart Details"
      aria-live="polite"
      aria-relevant="all"
    >
      <div>
        <span
          class="sr-only"
        >
          Shopping cart details are loaded.
        </span>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            In Your Cart
          </h5>
          <p>
            Your purchase contains the following:
          </p>
          <div
            class="row align-items-center mb-3 product-wrapper"
          >
            <div
              class="col-5"
            >
              <div
                class="embed-responsive embed-responsive-16by9"
              >
                <img
                  alt=""
                  class="img-thumbnail product-thumbnail"
                  src="https://edx.org/lu.jpg"
                />
              </div>
            </div>
            <div
              class="col-7"
            >
              <h6
                aria-level="3"
                class="m-0"
              >
                Introduction to Guanacos
              </h6>
              <p
                class="m-0"
              >
                Verified Certificate
              </p>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="summary-heading"
          aria-live="polite"
          class="basket-section"
          role="region"
        >
          <h5
            aria-level="2"
            id="summary-heading"
          >
            Summary
          </h5>
           
          <div
            class="summary-row d-flex"
          >
            <span
              class="flex-grow-1"
            >
              Price
            </span>
            <span
              class="summary-price"
            >
              <span>
                MX$1,264
                 *
              </span>
            </span>
          </div>
          <div
            class="summary-row font-weight-bold d-flex"
          >
            <span
              class="flex-grow-1"
            >
              TOTAL
            </span>
            <span
              class="text-right"
            >
              <span>
                MX$1,264
                 *
              </span>
            </span>
          </div>
          <div
            class="text-muted font-italic"
          >
            * This total contains an approximate conversion. You will be charged 
            $66.22
             USD.
          </div>
        </div>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            Order Details
          </h5>
          <p>
            After you complete your order you will be able to select course dates from your dashboard.
          </p>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Cart /> renders a cart with an offer 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            class="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              class="row align-items-center mb-3 product-wrapper"
            >
              <div
                class="col-5"
              >
                <div
                  class="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    class="img-thumbnail product-thumbnail"
                    src="https://edx.org/lekigud.gif"
                  />
                </div>
              </div>
              <div
                class="col-7"
              >
                <h6
                  aria-level="3"
                  class="m-0"
                >
                  Introduction to Pigs
                </h6>
                <p
                  class="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            class="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              class="summary-row d-flex"
            >
              <span
                class="flex-grow-1"
              >
                Price
              </span>
              <span
                class="summary-price"
              >
                $158.87
              </span>
            </div>
            <div
              class="summary-row"
            >
              <p
                class="d-flex m-0"
              >
                <span
                  class="flex-grow-1"
                >
                  Discounts applied
                </span>
                <span>
                  $0.00
                </span>
              </p>
              <p
                class="m-0 text-muted"
              >
                50%
                 discount provided by Pied Piper.
              </p>
            </div>
            <div
              class="summary-row font-weight-bold d-flex"
            >
              <span
                class="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                class="text-right"
              >
                $158.87
              </span>
            </div>
          </div>
          <div
            class="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-label="Shopping Cart Details"
      aria-live="polite"
      aria-relevant="all"
    >
      <div>
        <span
          class="sr-only"
        >
          Shopping cart details are loaded.
        </span>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            In Your Cart
          </h5>
          <p>
            Your purchase contains the following:
          </p>
          <div
            class="row align-items-center mb-3 product-wrapper"
          >
            <div
              class="col-5"
            >
              <div
                class="embed-responsive embed-responsive-16by9"
              >
                <img
                  alt=""
                  class="img-thumbnail product-thumbnail"
                  src="https://edx.org/lekigud.gif"
                />
              </div>
            </div>
            <div
              class="col-7"
            >
              <h6
                aria-level="3"
                class="m-0"
              >
                Introduction to Pigs
              </h6>
              <p
                class="m-0"
              >
                Verified Certificate
              </p>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="summary-heading"
          aria-live="polite"
          class="basket-section"
          role="region"
        >
          <h5
            aria-level="2"
            id="summary-heading"
          >
            Summary
          </h5>
           
          <div
            class="summary-row d-flex"
          >
            <span
              class="flex-grow-1"
            >
              Price
            </span>
            <span
              class="summary-price"
            >
              $158.87
            </span>
          </div>
          <div
            class="summary-row"
          >
            <p
              class="d-flex m-0"
            >
              <span
                class="flex-grow-1"
              >
                Discounts applied
              </span>
              <span>
                $0.00
              </span>
            </p>
            <p
              class="m-0 text-muted"
            >
              50%
               discount provided by Pied Piper.
            </p>
          </div>
          <div
            class="summary-row font-weight-bold d-flex"
          >
            <span
              class="flex-grow-1"
            >
              TOTAL
            </span>
            <span
              class="text-right"
            >
              $158.87
            </span>
          </div>
        </div>
        <div
          class="basket-section"
        >
          <h5
            aria-level="2"
          >
            Order Details
          </h5>
          <p>
            After you complete your order you will be able to select course dates from your dashboard.
          </p>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Cart /> renders the loading skeleton 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            class="sr-only"
          >
            Loading, please wait...
          </span>
          <div
            class="skeleton py-2 mb-3 w-50"
          />
          <div
            class="skeleton py-2 mb-4 mr-4"
          />
          <div
            class="row align-items-center mb-5"
          >
            <div
              class="col-5"
            >
              <div
                class="skeleton embed-responsive embed-responsive-16by9"
              />
            </div>
            <div
              class="col-7"
            >
              <div
                class="skeleton py-2 mb-3 w-50"
              />
              <div
                class="skeleton py-2 mr-4"
              />
            </div>
          </div>
          <div
            class="skeleton py-2 mb-3 w-50"
          />
          <div
            class="skeleton py-2 mb-2"
          />
          <div
            class="skeleton py-2 mb-5"
          />
          <div
            class="skeleton py-2 mb-3 w-50"
          />
          <div
            class="skeleton py-2 mb-2 mr-4"
          />
          <div
            class="skeleton py-2 mb-5 w-75"
          />
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      aria-label="Shopping Cart Details"
      aria-live="polite"
      aria-relevant="all"
    >
      <div>
        <span
          class="sr-only"
        >
          Loading, please wait...
        </span>
        <div
          class="skeleton py-2 mb-3 w-50"
        />
        <div
          class="skeleton py-2 mb-4 mr-4"
        />
        <div
          class="row align-items-center mb-5"
        >
          <div
            class="col-5"
          >
            <div
              class="skeleton embed-responsive embed-responsive-16by9"
            />
          </div>
          <div
            class="col-7"
          >
            <div
              class="skeleton py-2 mb-3 w-50"
            />
            <div
              class="skeleton py-2 mr-4"
            />
          </div>
        </div>
        <div
          class="skeleton py-2 mb-3 w-50"
        />
        <div
          class="skeleton py-2 mb-2"
        />
        <div
          class="skeleton py-2 mb-5"
        />
        <div
          class="skeleton py-2 mb-3 w-50"
        />
        <div
          class="skeleton py-2 mb-2 mr-4"
        />
        <div
          class="skeleton py-2 mb-5 w-75"
        />
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
